Added form link.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 Os alimentos serão recebidos no momento do credenciamento.
             </p>
             <a type="button" class="btn btn-success btn-lg"
-            target="_black" href="#">
+            target="_black" href="http://goo.gl/Kq8A4Q">
             Inscrição</a>
           </div>
         </section>
@@ -279,7 +279,7 @@
                 <h2 class="subtitle">Palestras</h2>
                 <p>A chamada de palestras está disponível até 28 de Agosto.</p>
                 <a type="button" class="btn btn-success btn-lg"
-                target="_black" href="#">
+                target="_black" href="http://goo.gl/Jpb9PM">
                 Enviar Palestra</a>
                 <!--
                 <div id="speech-1" class=speech-container>
