Update FTEC name.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TchêLinux Caxias do Sul - 2015</title>
+        <title>TchêLinux Caxias do Sul</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -59,17 +59,17 @@
             <h1 class="logo-name">
               <a class="logo-link" href="#" title="TchêLinux Caxias do Sul" itemprop="name">TchêLinux <br/>Caxias do Sul</a>
             </h1>
-            <h2 class="tagline">01 de Outubro de 2016, FTEC - Caxias do Sul</h2>
+            <h2 class="tagline">01 de Outubro de 2016, UNIFTEC - Caxias do Sul</h2>
           </div>
         </header>
         <section id="sobre">
             <div class ="container">
             <h2 class="subtitle">Sobre</h2>
             <p>
-                O grupo de usuários de Software Livre TchêLinux, em parceria com a FTEC Caxias do Sul, tem o prazer de convidar a comunidade, independente do nível de conhecimento e experiência com tecnologia, software livre e áreas afins, para participar do Seminário de Tecnologia em Software Livre TchêLinux.
+                O grupo de usuários de Software Livre TchêLinux, em parceria com a UNIFTEC Caxias do Sul, tem o prazer de convidar a comunidade, independente do nível de conhecimento e experiência com tecnologia, software livre e áreas afins, para participar do Seminário de Tecnologia em Software Livre TchêLinux.
             </p>
             <p>
-                O evento ocorrerá no dia 01 de Outubro, a partir das 8:30h, na FTEC de Caxias do Sul.
+                O evento ocorrerá no dia 01 de Outubro, a partir das 8:30h, na UNIFTEC de Caxias do Sul.
             </p>
             </div>
         </section>
@@ -550,7 +550,7 @@
           <h2 class="subtitle">Local</h2>
           <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3483.682705366813!2d-51.218478999999995!3d-29.174021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951ea2ffd3b94dbf%3A0x3398f5530c56890c!2sFtec+Faculdades!5e0!3m2!1spt-BR!2s!4v1406386338228" width="100%" height="450"></iframe>-->
           <p>
-          O evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da FTEC Caxias do Sul, localizado ao lado do prédio principal.
+          O evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da UNIFTEC Caxias do Sul, localizado ao lado do prédio principal.
           </p>
           <div id="imagens">
               <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/1401190_920699691328289_3233921780860087318_o.jpg"/>
@@ -561,7 +561,7 @@
           </div>
           <br/>
           <p>
-            FTEC - Caxias do Sul
+            UNIFTEC - Caxias do Sul
           </p>
           <p>
             R. Gustavo Ramos Sehbe, 107 - Bairro Cinquentenário.
@@ -578,8 +578,8 @@
                 <h4>Institucional</h4>
                 <ul class="apoio-list">
                   <li class="apoio-item">
-                    <a href="http://ftec.com.br" title="FTEC" class="apoio-logo apoio-link" target="_blank">
-                      <img src="images/ftec.png" alt="FTEC" class="photo"/>
+                    <a href="http://ftec.com.br" title="UNIFTEC" class="apoio-logo apoio-link" target="_blank">
+                      <img src="images/uniftec.png" alt="UNIFTEC" class="photo"/>
                     </a>
                   </li>
                   <!--
