--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
                 <h4>Institucional</h4>
                 <ul class="apoio-list">
                   <li class="apoio-item">
-                    <a href="http://ftec.com.br" title="UNIFTEC" class="apoio-logo apoio-link" target="_blank">
+                    <a href="http://ftec.com.br" title="UNIFT EC" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/uniftec.png" alt="UNIFTEC" class="photo"/>
                     </a>
                   </li>
@@ -590,11 +590,16 @@
                 </ul>
                 <h4>Patrocínio</h4>
                 <ul class="apoio-item">
-                    <!-- <li class="apoio-item">
-                      <a href="http://www.communitas.org.br/" title="Instituto Communitas" class="apoio-logo apoio-link" target="_blank">
-                        <img src="images/communitas.jpg" alt="Instituto Communitas" class="photo"/>
+                    <li class="apoio-item">
+                      <a href="http://www.flexxo.com.br/" title="Flexxo" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/flexxo.jpg" alt="Flexxo" class="photo"/>
                       </a>
-                    </li> -->
+                    </li>
+                    <li class="apoio-item">
+                      <a href="http://www.integrasul.com.br/" title="Integrasul" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/integrasul.jpg" alt="Integrasul" class="photo"/>
+                      </a>
+                    </li>
                 </ul>
             </div>
         </section>
