--- a/index.html
+++ b/index.html
@@ -600,6 +600,11 @@
                         <img src="images/integrasul.jpg" alt="Integrasul" class="photo"/>
                       </a>
                     </li>
+                    <li class="apoio-item">
+                      <a href="http://www.upworks.cc/" title="Upworks" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/upworks.jpg" alt="Upworks" class="photo"/>
+                      </a>
+                    </li>
                 </ul>
             </div>
         </section>
