--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         <section id="palestras">
             <div class="container">
                 <h2 class="subtitle">Palestras</h2>
-                <p>A chamada de palestras está disponível até 28 de Agosto.</p>
+                <p>A chamada de palestras está disponível até 11 de Setembro, Domingo.</p>
                 <a type="button" class="btn btn-success btn-lg"
                 target="_black" href="http://goo.gl/Jpb9PM">
                 Enviar Palestra</a>
