--- a/index.html
+++ b/index.html
@@ -591,6 +591,11 @@
                 <h4>Patrocínio</h4>
                 <ul class="apoio-item">
                     <li class="apoio-item">
+                      <a href="http://bitcom.psi.br/" title="Bitcom" class="apoio-logo apoio-link" target="_blank">
+                        <img src="images/bitcom.jpg" alt="Bitcom" class="photo"/>
+                      </a>
+                    </li>
+                    <li class="apoio-item">
                       <a href="http://www.flexxo.com.br/" title="Flexxo" class="apoio-logo apoio-link" target="_blank">
                         <img src="images/flexxo.jpg" alt="Flexxo" class="photo"/>
                       </a>
