Removed call for papers.

--- a/index.html
+++ b/index.html
@@ -277,10 +277,7 @@
         <section id="palestras">
             <div class="container">
                 <h2 class="subtitle">Palestras</h2>
-                <p>A chamada de palestras está disponível até 11 de Setembro, Domingo.</p>
-                <a type="button" class="btn btn-success btn-lg"
-                target="_black" href="http://goo.gl/Jpb9PM">
-                Enviar Palestra</a>
+                <p>Em breve a programação será disponibilizada.</p>
                 <!--
                 <div id="speech-1" class=speech-container>
                     <span class="speech-time">09h00</span>
