--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       <ul class="nav navbar-nav">
                         <li style="display:none;"><a href="#sobre">Sobre</a></li>
                         <li><a href="#inscricao">Inscrições</a></li>
-                        <!-- <li><a href="#programacao">Programação</a></li> -->
+                        <li><a href="#programacao">Programação</a></li>
                         <li><a href="#palestras">Palestras</a></li>
                         <!-- <li><a href="#certificados">Certificados</a></li> -->
                         <li><a href="#local">Local</a></li>
