Added facebook page link.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             <p>
                 O evento ocorrerá no dia 01 de Outubro, a partir das 8:30h, na UNIFTEC de Caxias do Sul.
             </p>
+            <p>
+                Acompanhe também nossa
+                <a href="https://www.facebook.com/tchelinuxcaxias"> página no facebook</a>.
+            </p>
             </div>
         </section>
         <section id="inscricao">
