Adicionado link para download dos certificados

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <li><a href="#inscricao">Inscrições</a></li>
                         <li><a href="#programacao">Programação</a></li>
                         <li><a href="#palestras">Palestras</a></li>
-                        <!-- <li><a href="#certificados">Certificados</a></li> -->
+                        <li><a href="#certificados">Certificados</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
                         <li><a href="#edicoes">Edições</a></li>
@@ -530,16 +530,14 @@
              </div>
         </section>
 
-<!--
         <section id="certificados">
           <div class="container">
             <h2 class="subtitle">Certificados</h2>
             <div class="individual-link">
-                <a target="_blank" href="https://github.com/TcheLinux/certificadoscaxias/tree/master/2015">Certificados para download!</a>
+                <a target="_blank" href="https://github.com/TcheLinux/certificadoscaxias/tree/master/2016">Certificados para download!</a>
             </div>
           </div>
         </section>
--->
 
         <section id="local">
         <div class="container">
