--- a/index.html
+++ b/index.html
@@ -56,20 +56,24 @@
         </nav>
         <header class="header">
           <div class="wrapper">
+            <img class="aniversario" src="images/10anos.png"></img>
             <h1 class="logo-name">
               <a class="logo-link" href="#" title="TchêLinux Caxias do Sul" itemprop="name">TchêLinux <br/>Caxias do Sul</a>
             </h1>
-            <h2 class="tagline">01 de Outubro de 2016, UNIFTEC - Caxias do Sul</h2>
+            <h2 class="tagline">21 de Outubro de 2017, UNIFTEC - Caxias do Sul</h2>
           </div>
         </header>
         <section id="sobre">
             <div class ="container">
             <h2 class="subtitle">Sobre</h2>
             <p>
+                O TchêLinux Caxias do Sul está complentando 10 anos de muita troca de conhecimento e experiências! Este será um evento especial, não deixe de participar!
+            </p>
+            <p>
                 O grupo de usuários de Software Livre TchêLinux, em parceria com a UNIFTEC Caxias do Sul, tem o prazer de convidar a comunidade, independente do nível de conhecimento e experiência com tecnologia, software livre e áreas afins, para participar do Seminário de Tecnologia em Software Livre TchêLinux.
             </p>
             <p>
-                O evento ocorrerá no dia 01 de Outubro, a partir das 8:30h, na UNIFTEC de Caxias do Sul.
+                O evento ocorrerá no dia 21 de Outubro, a partir das 8:30h, na UNIFTEC de Caxias do Sul.
             </p>
             <p>
                 Acompanhe também nossa
@@ -81,20 +85,26 @@
           <div class="container">
             <h2 class="subtitle">Inscrições</h2>
             <p>
+                As inscrições para o evento e as submissões de palestras estarão disponíveis em breve!
+            </p>
+            <p>
                 A participação no evento é gratuita, porém os participantes são incentivados a trazer 2kg de alimentos não perecíveis (exceto sal) que serão doados a uma instituição beneficente.
             </p>
             <p>
                 Os alimentos serão recebidos no momento do credenciamento.
             </p>
-            <a type="button" class="btn btn-success btn-lg"
+            <!-- <a type="button" class="btn btn-success btn-lg"
             target="_black" href="http://goo.gl/Kq8A4Q">
-            Inscrição</a>
+            Inscrição</a> -->
+
           </div>
         </section>
         <section id="programacao">
         <div class="container">
           <h2 class="subtitle">Programação</h2>
-            <div class="schedule-tbl">
+
+          <p>Em breve a programação será disponibilizada.</p>
+            <!-- <div class="schedule-tbl">
                 <table class="table table-responsive">
                     <thead>
                         <tr>
@@ -267,14 +277,17 @@
 
                     </tbody>
                 </table>
-            </div>
+            </div> -->
           </div>
         </section>
         <section id="palestras">
             <div class="container">
                 <h2 class="subtitle">Palestras</h2>
-                <!--<p>Em breve a programação será disponibilizada.</p>-->
-                <div id="speech-1" class=speech-container>
+                <!-- <p>Em breve a programação será disponibilizada.</p> -->
+                <p>
+                    A submissão de palestras estará disponíveis em breve, venha fazer parte dos 10 anos de TchêLinux Caxias!
+                </p>
+                <!-- <div id="speech-1" class=speech-container>
                     <span class="speech-time">09h00</span>
                     <div class="speech-info">
                         <h3 class="speech-title">
@@ -324,7 +337,7 @@
                         </span>
                         <h3 class="speaker-name">Carlos Alberto Parisotto</h3>
                         <span class="speaker-bio">
-                            Analista de suporte na empresa MBSEC Segurança da Informação. Tecnólogo em Redes de Computadores pela FTEC Caxias do Sul. Experiência de 8 anos em Linux e palestrante no Tchelinux Caxias há 6 anos. Certificado LPIC-2.
+                            Analista de suporte na empresa MBSEC Segurança da Informação. Tecnólogo em Redes de Computadores pela FTEC Caxias do Sul. Experiência de 8 anos em Linux e palestrante no TchêLinux Caxias há 6 anos. Certificado LPIC-2.
                         </span>
                     </div>
                 </div>
@@ -526,7 +539,7 @@
                             Conhecimentos em *, html5 e apaixonado por linux.
                         </span>
                     </div>
-                </div>
+                </div> -->
              </div>
         </section>
 
@@ -546,16 +559,8 @@
           <h2 class="subtitle">Local</h2>
           <!--<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3483.682705366813!2d-51.218478999999995!3d-29.174021!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x951ea2ffd3b94dbf%3A0x3398f5530c56890c!2sFtec+Faculdades!5e0!3m2!1spt-BR!2s!4v1406386338228" width="100%" height="450"></iframe>-->
           <p>
-          O evento acontecerá no CIEM - Centro de Inovação e Empreendedorismo da UNIFTEC Caxias do Sul, localizado ao lado do prédio principal.
+          O evento acontecerá no Bloco D da UNIFTEC, localizado em frente ao prédio principal.
           </p>
-          <div id="imagens">
-              <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xpt1/t31.0-8/1401190_920699691328289_3233921780860087318_o.jpg"/>
-              <img src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-xft1/t31.0-8/11411685_920699681328290_8444271572053353970_o.jpg"/>
-              <br/>
-              <img src="https://fbcdn-sphotos-h-a.akamaihd.net/hphotos-ak-xpf1/t31.0-8/11045488_920699487994976_1640738192957074763_o.jpg"/>
-              <img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xft1/t31.0-8/11536412_920699504661641_3807007452773663703_o.jpg"/>
-          </div>
-          <br/>
           <p>
             UNIFTEC - Caxias do Sul
           </p>
@@ -578,34 +583,14 @@
                       <img src="images/uniftec.png" alt="UNIFTEC" class="photo"/>
                     </a>
                   </li>
-                  <li class="apoio-item">
+                  <!-- <li class="apoio-item">
                     <a href="http://www.trinopolo.com.br/" title="Trino Polo" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/trinopolo.jpg" alt="Trino Polo" class="photo"/>
                     </a>
-                  </li>
+                  </li> -->
                 </ul>
                 <h4>Patrocínio</h4>
                 <ul class="apoio-item">
-                    <li class="apoio-item">
-                      <a href="http://bitcom.psi.br/" title="Bitcom" class="apoio-logo apoio-link" target="_blank">
-                        <img src="images/bitcom.jpg" alt="Bitcom" class="photo"/>
-                      </a>
-                    </li>
-                    <li class="apoio-item">
-                      <a href="http://www.flexxo.com.br/" title="Flexxo" class="apoio-logo apoio-link" target="_blank">
-                        <img src="images/flexxo.jpg" alt="Flexxo" class="photo"/>
-                      </a>
-                    </li>
-                    <li class="apoio-item">
-                      <a href="http://www.integrasul.com.br/" title="Integrasul" class="apoio-logo apoio-link" target="_blank">
-                        <img src="images/integrasul.jpg" alt="Integrasul" class="photo"/>
-                      </a>
-                    </li>
-                    <li class="apoio-item">
-                      <a href="http://www.upworks.cc/" title="Upworks" class="apoio-logo apoio-link" target="_blank">
-                        <img src="images/upworks.jpg" alt="Upworks" class="photo"/>
-                      </a>
-                    </li>
                 </ul>
             </div>
         </section>
@@ -616,6 +601,8 @@
                 <a href="2014/index.html">TchêLinux 2014</a>
                 <br/>
                 <a href="2015/index.html">TchêLinux 2015</a>
+                <br/>
+                <a href="2016/index.html">TchêLinux 2016</a>
             </div>
           </div>
         </section>
